[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-content_moderation_env"
version = "0.1.0"
description = "Content Moderation Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "content_moderation_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["content_moderation_env", "content_moderation_env.server"]
package-dir = { "content_moderation_env" = ".", "content_moderation_env.server" = "server" }
